# ipfce-2024-classroom-fml-285191U013-IPFCE-assignment-6-1

./: .gitignore  CMakeLists.txt  Makefile  README.md  list.c  list.h  max.c  max.h
.devcontainer/: devcontainer.json
.github/workflows/: classroom.yml
tests/: tests.cpp
